--- a/receiver/package.json
+++ b/receiver/package.json
@@ -11,8 +11,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "ejs": "~2.3.4",
     "jade": "~1.9.2",
     "morgan": "~1.5.3",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "redis": "^0.12.1",
+    "bluebird": "v2.10.2"
   }
 }
